hidden table of content on mobile

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -215,7 +215,7 @@ const breadcrumbJsonLd = {
           
           <!-- Sidebar -->
 
-          <aside class="lg:col-span-4 sticky top-8 self-start">
+          <aside class="hidden lg:block lg:col-span-4 sticky top-8 self-start">
             {pageHeadings && pageHeadings.length > 0 && (
               <TableOfContents headings={pageHeadings} />
             )}
